Name:                implicit
Version:             0.3.0.1
Cabal-version:       >= 1.10
Tested-with:         GHC >= 8.6
Build-type:          Simple
Synopsis:            A math-inspired programmatic 2D & 3D CAD system.
Description:         An OpenSCAD execution engine for generating models in STL and many other formats.
License:             AGPL-3
License-file:        LICENSE
Author:              Julia Longtin <julia.longtin@gmail.com>
Maintainer:          Julia Longtin <julia.longtin@gmail.com>
Homepage:            http://implicitcad.org/
Category:            Graphics

flag docgen
  default:
    True
  description:
    Builds docgen program

flag implicitsnap
  default:
    False
  description:
    Builds implicitsnap program

Library

    Default-Extensions: NoImplicitPrelude
    Default-Language: Haskell2010
    Build-depends:
                  base >= 3 && < 5,
                  filepath,
                  directory,
                  parsec,
                  parallel,
                  containers,
                  deepseq,
                  vector-space,
                  hspec,
                  text,
                  bytestring,
                  blaze-builder,
                  blaze-markup,
                  blaze-svg,
                  storable-endian,
                  JuicyPixels,
                  transformers,
                  mtl

    Ghc-options:
--                -O2
                -optc-O3
--                -dynamic
                -- see GHC manual 8.2.1 section 6.5.1.
                -feager-blackholing
                -- for debugging.
                -Wall
                -Wcompat
                -Wmonomorphism-restriction
                -Wmissing-signatures
                -Wmissing-export-lists
                -Wmissing-import-lists
                -Wmissing-home-modules
                -Widentities
                -Wimplicit-prelude
                -Wredundant-constraints
                -Wall-missed-specialisations
--                -Werror
    Exposed-modules:
                    Graphics.Implicit
                    Graphics.Implicit.Definitions
                    Graphics.Implicit.Primitives
                    Graphics.Implicit.Export
                    Graphics.Implicit.MathUtil
                    Graphics.Implicit.ObjectUtil
                    -- These are exposed for implicitsnap.
                    Graphics.Implicit.Export.TriangleMeshFormats
                    Graphics.Implicit.Export.NormedTriangleMeshFormats
                    Graphics.Implicit.Export.PolylineFormats
                    Graphics.Implicit.Export.DiscreteAproxable
                    -- These are exposed for Benchmark.
                    Graphics.Implicit.Export.SymbolicObj2
                    Graphics.Implicit.Export.SymbolicObj3

    Other-modules:
                  Graphics.Implicit.FastIntUtil
                  Graphics.Implicit.IntegralUtil
                  Graphics.Implicit.ObjectUtil.GetBox2
                  Graphics.Implicit.ObjectUtil.GetBox3
                  Graphics.Implicit.ObjectUtil.GetImplicit2
                  Graphics.Implicit.ObjectUtil.GetImplicit3
                  Graphics.Implicit.Export.MarchingSquaresFill
                  Graphics.Implicit.Export.RayTrace
                  Graphics.Implicit.Export.Util
                  Graphics.Implicit.Export.TextBuilderUtils
                  Graphics.Implicit.Export.Symbolic.Rebound2
                  Graphics.Implicit.Export.Symbolic.Rebound3
                  Graphics.Implicit.Export.Render
                  Graphics.Implicit.Export.Render.Definitions
                  Graphics.Implicit.Export.Render.GetLoops
                  Graphics.Implicit.Export.Render.GetSegs
                  Graphics.Implicit.Export.Render.HandleSquares
                  Graphics.Implicit.Export.Render.Interpolate
                  Graphics.Implicit.Export.Render.RefineSegs
                  Graphics.Implicit.Export.Render.TesselateLoops
                  Graphics.Implicit.Export.Render.HandlePolylines

Benchmark Benchmark
   Type: exitcode-stdio-1.0
   Main-is: Benchmark.hs
   default-extensions: NoImplicitPrelude
   Default-Language: Haskell2010
   Hs-source-dirs: programs
   Build-depends:
                 base,
                 criterion,
                 implicit
   Ghc-options:
--               -O2
               -optc-O3
--               -dynamic
               -- for debugging.
               -Wall
               -Wcompat
               -Wmonomorphism-restriction
               -Wmissing-signatures
               -Wmissing-export-lists
               -Wmissing-import-lists
               -Wmissing-home-modules
               -Widentities
               -Wimplicit-prelude
               -Wredundant-constraints
               -Wall-missed-specialisations
--               -Werror

Test-suite test-implicit
    Type: exitcode-stdio-1.0
    default-extensions: NoImplicitPrelude
    Default-Language: Haskell2010
    Build-depends:
                  base,
                  hspec,
                  implicit,
                  text,
                  parsec,
                  HUnit,
                  hedgehog,
                  hw-hspec-hedgehog
    Main-is: Main.hs
    Hs-source-dirs: tests
    Ghc-options:
                -threaded
                -rtsopts "-with-rtsopts -N -qg -t"
--                -O2
                -optc-O3
--                -dynamic
                -- for debugging.
                -Wall
                -Wcompat
                -Wmonomorphism-restriction
                -Wmissing-signatures
                -Wmissing-export-lists
                -Wmissing-import-lists
                -Wmissing-home-modules
                -Widentities
                -Wimplicit-prelude
                -Wredundant-constraints
                -Wall-missed-specialisations
--                -Werror
    Other-Modules:
                  ParserSpec.Expr
                  ParserSpec.Statement
                  ParserSpec.Util
                  ExecSpec.Expr
                  ExecSpec.Util
                  MessageSpec.Message
                  MessageSpec.Util
                  PropertySpec
                  PropertySpec.Exec


Source-repository head
    Type:            git
    Location:        https://github.com/colah/ImplicitCAD.git
